Ajout d'id au bouton Calculer

--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
     <label for="b">Nombre b :</label>
     <input type="number" step="any" id="b" name="b" required />
 
-    <button type="submit">Calculer la somme</button>
+    <button type="submit" id="add-button">Calculer la somme</button>
 </form>
 
 <div id="result"></div>
